Lets get the upload and clusters going

--- a/src/components/fields/FieldGender/FieldGender.html
+++ b/src/components/fields/FieldGender/FieldGender.html
@@ -4,4 +4,5 @@
       <select class="form-control gender" id="{{ID}}" placeholder="{{LABEL}}" value="{{USER_GENDER}}">
             {{GENDERS}}
       </select>
+      {{__CHILDREN__}}
 </div>
