--- a/src/components/fields/FieldDOB/FieldDOB.html
+++ b/src/components/fields/FieldDOB/FieldDOB.html
@@ -1,5 +1,23 @@
 
-<div class="form-group">
+<div class="form-group FieldDOB">      
       <label for="{{ID}}">{{LABEL}}</label>
-      <input type="date" class="form-control dob" id="{{ID}}" placeholder="{{LABEL}}" value="{{VALUE}}">
-</div>
+      <div class="FieldDOB-selects-container">
+            <select class="form-control FieldDOBMonth" data-parentId="{{ID}}">
+                  <option value="1">January</option>
+                  <option value="2">February</option>
+                  <option value="3">March</option>
+                  <option value="4">April</option>
+                  <option value="5">May</option>
+                  <option value="6">June</option>
+                  <option value="7">July</option>
+                  <option value="8">August</option>
+                  <option value="9">September</option>
+                  <option value="10">October</option>
+                  <option value="11">November</option>
+                  <option value="12">December</option>
+            </select>
+            <select class="form-control FieldDOBDay" data-parentId="{{ID}}"></select>
+            <select class="form-control FieldDOBYear" data-parentId="{{ID}}"></select>            
+      </div>
+      <input type="date" id="{{ID}}" name="{{ID}}" value="{{VALUE}}" class="FieldDOBDate">
+</div> 
