--- a/src/components/uploads/AvatarUpload/AvatarUpload.css
+++ b/src/components/uploads/AvatarUpload/AvatarUpload.css
@@ -1,14 +1,25 @@
+/*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+//|| True Components CSS
+//|| Avatar Upload
+//||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Main
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
-div.avatarUpload {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 100%;
-      border: 2px dashed #ccc;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: border 0.3s;
-}
+      div.avatarUpload {
+            display           : block;
+            margin            : 0 auto;
+            border            : 2px dashed #ccc;
+            cursor            : pointer;
+            width             : 200px;
+      }
+
+      div.avatarUpload img {
+            width             : 200px;
+            height            : 200px;
+            object-fit        : cover;
+            border-radius     : 50%;
+            margin            : 30px 0;
+            border            : 4px solid #FFF;
+      }
