--- a/src/components/uploads/AvatarUpload/AvatarUpload.html
+++ b/src/components/uploads/AvatarUpload/AvatarUpload.html
@@ -1,5 +1,6 @@
 
 <div class="avatarUpload">
-      <img src="{{MEDIA_UPLOAD}}">
+      <img src="{{MEDIA_UPLOAD}}">      
+      <input type="hidden" name="fid_media_profile" value="{{FID_MEDIA_PROFILE}}">
       <input type="file" id="avatar" name="avatar" accept="image/*" />
 </div>
