--- a/src/views/containers/members.html
+++ b/src/views/containers/members.html
@@ -34,12 +34,12 @@
       <body>
             <style>
                   main {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        justify-content: center;
-                        height: calc(100vh - var(--nav-height));
-                        font-family: 'Noto Sans', sans-serif;
+                        display           : block;
+                        width             : 100%;
+                        top               : var(--nav-height);
+                        height            : calc(100vh - var(--nav-height));
+                        font-family       : 'Noto Sans', sans-serif;
+                        border            : 2px solid yellow;
                   }
             </style>
             <component src="NavMembers" id="navMembers"></component>
