Working on media uploads

--- a/src/components/forms/members/ProfileComplete/ProfileComplete.html
+++ b/src/components/forms/members/ProfileComplete/ProfileComplete.html
@@ -7,6 +7,7 @@
                   <h2>[[C:FINISH_YOUR_PROFILE]]</h2>
                   <component id="user_gender" label="[[C:GENDER]]" src="FieldGender" value="{{USER_GENDER}}"></component>
                   <component id="user_username" label="[[C:USERNAME]]" src="FieldUsername" id_user={{ID_USER}} value="{{USER_USERNAME}}"></component>
+                  <component id="user_password" label="[[C:PASSWORD]]" src="FieldPassword" value=""></component>
                   <component id="user_dob" label="[[DOB]]" src="FieldDOB" value="{{USER_DOB}}" placeholder="[[DOB]]"></component>            
                   <component id="submit" value="[[C:UPDATE]]" src="FieldSubmit"></component>    
             </div>                  
