--- a/src/components/uploads/AvatarCover/AvatarCover.html
+++ b/src/components/uploads/AvatarCover/AvatarCover.html
@@ -7,4 +7,5 @@
       </div>
       <input type="hidden" name="fid_media_cover" value="{{FID_MEDIA_COVER}}">
       <input style="visibility : hidden" type="file" id="avatar" name="avatar" accept="image/*" />      
+      <input type="hidden" name="uploadJWT" value="{{UPLOADJWT}}">
 </div>
