--- a/src/components/uploads/AvatarUpload/AvatarUpload.html
+++ b/src/components/uploads/AvatarUpload/AvatarUpload.html
@@ -3,4 +3,5 @@
       <img src="{{MEDIA_UPLOAD}}">      
       <input type="hidden" name="fid_media_profile" value="{{FID_MEDIA_PROFILE}}">
       <input type="file" id="avatar" name="avatar" accept="image/*" />
+      <input type="hidden" name="uploadJWT" value="{{UPLOADJWT}}">
 </div>
