--- a/src/views/public/login.html
+++ b/src/views/public/login.html
@@ -1,6 +1,7 @@
 
       <div class="splitscreen">
             <div class="left">
+                  <component src="TestUpload" id="idUpload"></component>
             </div>
             <div class="right">
                   <component src="ModalLogin" id="modalLogin"></component>
