We are now passing chirp through to the component parser to enable the fusion of chirp.user, chirp.data and component attributes

--- a/src/views/public/login.html
+++ b/src/views/public/login.html
@@ -1,7 +1,7 @@
 
       <div class="splitscreen">
             <div class="left">
-                  <component src="TestUpload" id="idUpload"></component>
+                  <component src="TestUpload" id="idUpload" data-area="GA" data-fidarea="12"></component>
             </div>
             <div class="right">
                   <component src="ModalLogin" id="modalLogin"></component>
