Mostly Dev/Prod safe. Still working on adding watermark to images: ;

--- a/src/components/uploads/TestUpload/TestUpload.html
+++ b/src/components/uploads/TestUpload/TestUpload.html
@@ -4,6 +4,6 @@
             <input type="text" name="uploadJWT" value="{{UPLOADJWT}}">
             <input class="form-control" type="text" name="post" value="TEST" /><br>
             <input type="file" id="file-upload" name="files" multiple><br>
-            <input class="form-control" type="submit" value="Upload" /><br>
+            <input class="form-control btn submit" type="submit" value="Upload" /><br>            
       </form>
-</div>
+</div> 
