--- a/src/components/fields/FieldDOB/FieldDOB.html
+++ b/src/components/fields/FieldDOB/FieldDOB.html
@@ -3,18 +3,18 @@
       <label for="{{ID}}">{{LABEL}}</label>
       <div class="FieldDOB-selects-container">
             <select class="form-control FieldDOBMonth" data-parentId="{{ID}}">
-                  <option value="1">January</option>
-                  <option value="2">February</option>
-                  <option value="3">March</option>
-                  <option value="4">April</option>
-                  <option value="5">May</option>
-                  <option value="6">June</option>
-                  <option value="7">July</option>
-                  <option value="8">August</option>
-                  <option value="9">September</option>
-                  <option value="10">October</option>
-                  <option value="11">November</option>
-                  <option value="12">December</option>
+                  <option value="1">[[C:MONTH_JAN]]</option>
+                  <option value="2">[[C:MONTH_FEB]]</option>
+                  <option value="3">[[C:MONTH_MAR]]</option>
+                  <option value="4">[[C:MONTH_APR]]</option>
+                  <option value="5">[[C:MONTH_MAY]]</option>
+                  <option value="6">[[C:MONTH_JUN]]</option>
+                  <option value="7">[[C:MONTH_JUL]]</option>
+                  <option value="8">[[C:MONTH_AUG]]</option>
+                  <option value="9">[[C:MONTH_SEP]]</option>
+                  <option value="10">[[C:MONTH_OCT]]</option>
+                  <option value="11">[[C:MONTH_NOV]]</option>
+                  <option value="12">[[C:MONTH_DEC]]</option>
             </select>
             <select class="form-control FieldDOBDay" data-parentId="{{ID}}"></select>
             <select class="form-control FieldDOBYear" data-parentId="{{ID}}"></select>            
