--- a/src/views/members/profile/complete.html
+++ b/src/views/members/profile/complete.html
@@ -1,1 +1,1 @@
-<component src="ProfileComplete" id="profileComplete"></component>
+<component src="ProfileComplete" id="profileComplete" data-area="US" data-fidarea="{{ID_USER}}"></component>
