--- a/src/components/uploads/AvatarUpload/AvatarUpload.css
+++ b/src/components/uploads/AvatarUpload/AvatarUpload.css
@@ -16,6 +16,7 @@
       }
 
       div.avatarUpload img {
+            display           : block;
             width             : 200px;
             height            : 200px;
             object-fit        : cover;
