Need to figure out the onSuccess/onError in the queue

--- a/src/components/forms/members/ProfileComplete/ProfileComplete.html
+++ b/src/components/forms/members/ProfileComplete/ProfileComplete.html
@@ -1,6 +1,6 @@
 <div class="profileComplete">
-            <component id="user_cover" src="AvatarCover" id="coverUpload" fid_media_cover="{{FID_MEDIA_COVER}}" data-area="US" data-fidarea="{{ID_USER}}">
-                  <component id="user_avatar" src="AvatarUpload" id="avatarUpload"  fid_media_profile="{{FID_MEDIA_PROFILE}}" data-area="US" data-fidarea="{{ID_USER}}"></component>
+            <component id="user_cover" src="UploadCover" id="coverUpload" fid_media_cover="{{FID_MEDIA_COVER}}" data-area="US" data-fidarea="{{ID_USER}}">
+                  <component id="user_avatar" src="UploadAvatar" id="avatarUpload"  fid_media_profile="{{FID_MEDIA_PROFILE}}" data-area="US" data-fidarea="{{ID_USER}}"></component>
             </component>      
             <div class="formFieldsProfileComplete">  
                   <h2>[[C:FINISH_YOUR_PROFILE]]</h2>
