--- a/src/maestro/css/modal.css
+++ b/src/maestro/css/modal.css
@@ -1,55 +1,58 @@
 /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
-//|| Maestro.js :: Public Library
-//|| Maestro CSS Library - Modal
+//|| True Components JS
+//|| Upload Cover
 //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
-      .modal {
-            display           : none;
-      }
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Overlay
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
-      .modal{
+      div.modal.overlay {
+            display           : none;
             position          : fixed;
-            top               : 0;
-            left              : 0;
-            right             : 0;
-            bottom            : 0;
             width             : 100%;
             height            : 100%;
-            background        : rgba(0,0,0,0.5);
-            z-index           : 997;
+            top               : 0;
+            left              : 0;
+            background-color  : rgba(0, 0, 0, 0.5);
+            z-index           : 1000;
+            justify-content   : center;
+            align-items       : center;
+            box-sizing        : border-box;
+            overflow          : auto;
+            z-index           : 1000;
+            padding           : 20px;
       }
 
-      .modal .close {
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Close Button
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
+
+      div.modal button.close {
             position          : absolute;
-            top               : 0px;
-            right             : 10px;
-            font-size         : 50px;
-            font-weight       : 300;
-            text-decoration   : none;
-            color             : #000;
+            background        : inherit;
+            top               : 20px;
+            right             : 20px;
+            width             : 30px;
+            height            : 30px;
+            border            : 0;
+            font-size         : 20px;
+            cursor            : pointer;
+            z-index           : 1001;
+            padding           : 0;
+            margin            : 0;
       }
-      .modal .content{
-            position          : fixed;
+
+      div.modal button.close i {
+            color             : rgba(0, 0, 0, 0.3);
             display           : block;
-            top               : 50%;
-            left              : 50%;
-            width             : 50%;
-            height            : 50%;
-            min-width         : 320px;
-            background        : #FFF;
-            padding           : 30px;
-            border-radius     : 4px;
-            margin            : -15% 0 0 -25%;   
-            overflow-y        : auto;
-            z-index           : 998;
+            font-size         : 12px;
+            width             : 100%;
+            height            : 100%;
+            padding           : 0;
+            margin            : 0;
+      }      
+
+      div.modal button.close i:hover {
+            color             : rgba(0, 0, 0, 1);
       }
-      .modal .content h2{
-            margin-top:0;
-            color:#333
-      }
-      .modal .content > div{
-            max-height:30%;
-            overflow:auto;
-      }
-      
-      
