--- a/src/components/modals/ModalPopupSmall/ModalPopupSmall.html
+++ b/src/components/modals/ModalPopupSmall/ModalPopupSmall.html
@@ -1,8 +1,7 @@
-
-<div class="modal overlay" id="{{ID}}">
-      <div class="modal content small">
-            <button class="close" id="modalPopupSmallClose"><i><FontAwesomeIcon icon="faTimes" /></i></button>
-            <div class="modal content inner">
+<div class="modal overlay" id="{{ID}}" onclick="$(this).hide()">
+      <div class="modal content small" onclick="event.stopPropagation()">
+            <button class="close" id="modalPopupSmallClose" onclick="$(this).parent().parent().hide()"><i><FontAwesomeIcon icon="faTimes" /></i></button>
+            <div class="modalPopupSmallContent">
                   {{__CHILDREN__}}
             </div>
       </div>
