--- a/src/components/fields/FieldGender/FieldGender.html
+++ b/src/components/fields/FieldGender/FieldGender.html
@@ -1,7 +1,7 @@
 
 <div class="form-group FieldGender">
       <label for="{{ID}}">{{LABEL}}</label>
-      <select class="form-control gender" id="{{ID}}" placeholder="{{LABEL}}" value="{{USER_GENDER}}">
+      <select class="form-control gender" id="{{ID}}" placeholder="{{LABEL}}" value="{{USER_GENDER}}" name="gender">
             {{GENDERS}}
       </select>
       {{__CHILDREN__}}
