--- a/src/components/fields/FieldPassword/FieldPassword.css
+++ b/src/components/fields/FieldPassword/FieldPassword.css
@@ -12,7 +12,7 @@
       }
 
       div.form-group.FieldPassword div.form-wrap {
-            display           : flex;
+            display           : block;
             align-items       : center;
       }
 
@@ -37,3 +37,21 @@
             border            : 0;
             color             : #999;
       }
+
+      div.form-group.FieldPassword.invalid div.form-wrap i,
+      div.form-group.FieldPassword.valid div.form-wrap i {
+            top               : 30%;
+      }
+
+      .FieldPassword .status {
+            display           : none;
+            margin            : 10px 0 0;
+            padding           : 10px 10px;
+            background        : rgba(0, 0, 0, 0.05);
+            border-radius     : 4px;
+            font-size         : 90%;
+            font-weight       : bold;
+      }
+
+      .FieldPassword.invalid span.status.statusError { color : red; display : block;}
+      .FieldPassword.valid span.status.statusSuccess { display : block;}
