--- a/src/components/fields/FieldUsername/FieldUsername.html
+++ b/src/components/fields/FieldUsername/FieldUsername.html
@@ -2,7 +2,7 @@
 <div class="form-group FieldUsername" data-id_user="{{ID_USER}}" data-username="{{VALUE}}">
       <label for="{{ID}}">{{LABEL}}</label>
       <div class="form-wrap">
-            <input type="text" class="form-control username" id="{{ID}}" placeholder="{{LABEL}}" name="{{NAME}}" value="{{VALUE}}">
+            <input type="text" class="form-control username" id="{{ID}}" placeholder="{{LABEL}}" name="username" value="{{VALUE}}">
             <i class="statusIcon ok"><FontAwesomeIcon icon="faCheckCircle" /></i>
             <i class="statusIcon error"><FontAwesomeIcon icon="faTimesCircle" /></i>
             <i class="statusIcon wait spinner"><FontAwesomeIcon icon="faSpinner" /></i>
