--- a/src/components/modals/ModalConfirm/ModalConfirm.html
+++ b/src/components/modals/ModalConfirm/ModalConfirm.html
@@ -1,1 +1,11 @@
-Hi I'm a Modal Confirm
+
+<div class="modal overlay confirm" id="modalConfirm">
+      <div class="modal confirm">
+            <h2></h2>
+            <p></p>
+            <div class="buttons">
+                  <button class="confirm">Yes</button>
+                  <button class="dismiss">No</button>
+            </div>
+      </div>
+</div>
