--- a/src/components/modals/ModalMediaQueueStatus/ModalMediaQueueStatus.html
+++ b/src/components/modals/ModalMediaQueueStatus/ModalMediaQueueStatus.html
@@ -1,4 +1,4 @@
-<div id="modalPopupMQS" onclick="event.stopPropagation()">
+<div id="modalPopupMQS" onclick="event.stopPropagation()" style="display:none">
       <div class="modalPopupSmallContent">
             <div class="modalMediaQueueStatus"></div>
             <li class="template" id="MediaQueueStatusItem-PENDNG">
