--- a/src/components/users/UserData/UserData.html
+++ b/src/components/users/UserData/UserData.html
@@ -1,5 +1,5 @@
-<button id="userDataDebug" onclick=" $('div#userDataDebug').show()">Debug</button>
-<div id="userDataDebug">
+<button id="userDataDebug" onclick=" $('div#userDataDebug').show()" style="display:none">Debug</button>
+<div id="userDataDebug" style="display:none">
       <button onclick="$(this).parent().hide();">x</button>
       <div class="dataHere"></div>
 </div> 
