--- a/src/components/fields/FieldPassword/FieldPassword.html
+++ b/src/components/fields/FieldPassword/FieldPassword.html
@@ -1,8 +1,10 @@
 
-<div class="form-group FieldPassword">
+<div class="form-group FieldPassword" data-regex-match="^.{6,}$">
       <label for="{{ID}}">{{LABEL}}</label>
       <div class="form-wrap">
-            <input type="password" class="form-control passwordInput" id="{{ID}}" placeholder="{{LABEL}}" name="{{NAME}}" value="{{VALUE}}">
+            <input name="password" type="password" class="form-control passwordInput" id="{{ID}}" placeholder="{{LABEL}}" name="{{NAME}}" value="{{VALUE}}">
             <i class="togglePasswordShow"><FontAwesomeIcon icon="faEye" /></i>
       </div>
+      <span class="status statusError">✕ [[PASSWORD_MATCH_ERROR]]</span>
+      <span class="status statusSuccess">✓ [[PASSWORD_MATCH_OK]]</span>
 </div>
