--- a/src/views/containers/members.html
+++ b/src/views/containers/members.html
@@ -25,7 +25,7 @@
 
             <!-- Stylesheets -->
             <link rel="stylesheet" href="/maestro.css">
-            <link rel="stylesheet" href="/members/profile/complete.css">
+            <link rel="stylesheet" href="/members/index.css"> 
 
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,6 +51,6 @@
             <component id="modalSnackBar" src="ModalSnackBar"></component>
 
             <script src="/maestro.js"></script>
-            <script src="/members/profile/complete.js"></script>
+            <script src="/members/index.js"></script>
       </body>
 </html>
