--- a/src/views/public/register.html
+++ b/src/views/public/register.html
@@ -4,7 +4,7 @@
                   
             </div>
             <div class="right">
-                  <component src="ModalLogin" id="modalLogin"></component>
+                  <component src="ModalRegister" id="modalRegister"></component>
             </div>
       </div>            
 
