--- a/src/maestro/css/splitscreen.css
+++ b/src/maestro/css/splitscreen.css
@@ -19,8 +19,11 @@
       
       .left {
             width             : 50%;
+            background        : #CCC;
+            padding           : 20px;            
       }
       
       .right {
             width             : 50%;
+            padding           : 60px;
       }
