--- a/src/components/modals/ModalVerification/ModalVerification.html
+++ b/src/components/modals/ModalVerification/ModalVerification.html
@@ -1,7 +1,6 @@
 
-<section class="modal verification" id="modalVerification">
+<section class="ModalVerification" id="modalVerification">
       <div class="content"> 
-            <a class="close" href="#">&times;</a>
 
             <form action="/auth/verify" method="post" id="verificationCode">
                   <h2>[[ENTER_VERIFICATION_CODE]]</h2>
