--- a/src/views/containers/wrapper.html
+++ b/src/views/containers/wrapper.html
@@ -25,7 +25,7 @@
 
             <!-- Stylesheets -->
             <link rel="stylesheet" href="/maestro.css">
-            <link rel="stylesheet" href="/login.css">
+            <link rel="stylesheet" href="{{PAGECSS}}">
 
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,6 +51,6 @@
             <component id="modalConfirm" src="ModalConfirm"></component>
             <component id="modalSnackBar" src="ModalSnackBar"></component>            
             <script src="/maestro.js"></script>
-            <script src="/login.js"></script>
+            <script src="{{PAGEJS}}"></script>
       </body>
 </html>
