--- a/src/components/modals/ModalForgot/ModalForgot.css
+++ b/src/components/modals/ModalForgot/ModalForgot.css
@@ -3,12 +3,11 @@
 //|| Modal Register
 //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
-
       /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
       //|| CSS
       //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
-      section.ModalRegister {
+      section.ModalForgot {
             display           : flex;
             flex-direction    : column;
             justify-content   : top;
@@ -16,13 +15,5 @@
             width             : 100%;
             padding           : 20px;
             border            : 1px solid #CCC;
-      }
-
-
-      div.form-group input.verificationCode {
-            font-size         : 200%;
-            letter-spacing    : 50px;
-            text-align        : center;            
-            border-radius     : 0;
       }
 
