--- a/src/components/navigation/NavPublic/NavPublic.html
+++ b/src/components/navigation/NavPublic/NavPublic.html
@@ -19,8 +19,8 @@
 
               <div class="navTopAuth navTopSection">
                     <div class="navTopAuthWrap navTopWrap">
-                          <button class="buttonAuthLogin"><span><FontAwesomeIcon icon="faUserLock" /></span>[[C:LOGIN]]</button>
-                          <button class="buttonAuthSignup"><span><FontAwesomeIcon icon="faUserPen" /></span>[[C:SIGNUP]]</button>                                                
+                          <a href="/login" class="buttonAuthLogin"><span><FontAwesomeIcon icon="faUserLock" /></span>[[C:LOGIN]]</a>
+                          <a href="/register"class="buttonAuthSignup"><span><FontAwesomeIcon icon="faUserPen" /></span>[[C:SIGNUP]]</a>                                                
                     </div>
               </div>
               <div class="navTopMenu navTopSection">
