--- a/src/components/modals/ModalVerification/ModalVerification.html
+++ b/src/components/modals/ModalVerification/ModalVerification.html
@@ -1,6 +1,7 @@
 
 <section class="ModalVerification" id="modalVerification">
       <div class="content"> 
+            <button class="close" href="#">&times;</button>
 
             <form action="/auth/verify" method="post" id="verificationCode">
                   <h2>[[ENTER_VERIFICATION_CODE]]</h2>
