Good stopping point, need to figure out why the JWT to /auth/verified is invalid

--- a/src/views/public/index.html
+++ b/src/views/public/index.html
@@ -1,10 +1,2 @@
 
-<div class="splitscreen">
-      <div class="left">
-            
-      </div>
-      <div class="right">
-            <component src="ModalRegister" id="modalRegister"></component>
-      </div>
-</div>            
-
+      {{AUTHERROR}}
