--- a/src/components/modals/ModalForgot/ModalForgot.html
+++ b/src/components/modals/ModalForgot/ModalForgot.html
@@ -6,6 +6,7 @@
                   <div class="form-group" data-validation="email" data-error="[[Please enter a valid email address]]" data-label="[[EMAIL_ADDRESS]]">
                         <label for="registerEmail"></label>
                         <input name="emailOrPhone" type="email" class="form-control" id="emailOrPhone" aria-describedby="emailHelp" value="ralph.ferrara@gmail.com">
+                        <input type="hidden" name="area" value="RESET">
                   </div>
                   <button class="icon" />
                         <i><FontAwesomeIcon icon="faChevronRight" /></i>
