--- a/src/components/modals/ModalVerification/ModalVerification.html
+++ b/src/components/modals/ModalVerification/ModalVerification.html
@@ -8,6 +8,7 @@
                   
                   <input type="hidden" name="registerType" id="registerType" value="" />
                   <input type="hidden" name="token" id="token" value="" />
+                  <input type="hidden" name="area" value="" />
                   
                   <div class="form-group" data-validation="code" data-error="[[ENTER_VERIFICATION_CODE]]" data-label="[[ENTER_VERIFICATION_CODE]]">
                         <label for="code"></label>
