All auth works. Tests and optimize. Tests and optimize

--- a/src/components/fields/FieldPasswordMatch/FieldPasswordMatch.html
+++ b/src/components/fields/FieldPasswordMatch/FieldPasswordMatch.html
@@ -1,8 +1,8 @@
 
-<div class="form-group FieldPassword" data-regex-match="^.{6,}$">
+<div class="form-group FieldPasswordMatch" data-regex-match="^.{6,}$">
       <label for="{{ID}}">{{LABEL}}</label>
       <div class="form-wrap">
-            <input name="password" type="password" class="form-control passwordInput" id="{{ID}}" placeholder="{{LABEL}}" name="{{NAME}}">
+            <input name="password_match" type="password" class="form-control passwordInput" id="{{ID}}" placeholder="{{LABEL}}" name="{{NAME}}">
             <i class="togglePasswordShow"><FontAwesomeIcon icon="faEye" /></i>
       </div>
       <span class="status statusError">✕ [[PASSWORD_MATCH_ERROR]]</span>
