--- a/src/components/modals/ModalRegister/ModalRegister.html
+++ b/src/components/modals/ModalRegister/ModalRegister.html
@@ -3,8 +3,7 @@
       <div class="border-box form">
             <form action="/auth/register" method="post" id="registerEmail">
                   <h2>[[REGISTER_WITH_EMAIL_ADDRESS]]</h2>
-                  <div class="form-group" data-validation="email"
-                        data-error="[[Please enter a valid email address]]" data-label="[[EMAIL_ADDRESS]]">
+                  <div class="form-group" data-validation="email" data-error="[[Please enter a valid email address]]" data-label="[[EMAIL_ADDRESS]]">
                         <label for="registerEmail"></label>
                         <input name="emailOrPhone" type="email" class="form-control" id="emailOrPhone" aria-describedby="emailHelp" value="ralph.ferrara@gmail.com">
                   </div>
