--- a/src/components/fields/FieldPasswordMatch/FieldPasswordMatch.css
+++ b/src/components/fields/FieldPasswordMatch/FieldPasswordMatch.css
@@ -7,16 +7,16 @@
       //|| Form Fields
       //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
-      div.form-group.FieldPassword {
+      div.form-group.FieldPasswordMatch {
             position          : relative;
       }
 
-      div.form-group.FieldPassword div.form-wrap {
+      div.form-group.FieldPasswordMatch div.form-wrap {
             display           : block;
             align-items       : center;
       }
 
-      div.form-group.FieldPassword input {
+      div.form-group.FieldPasswordMatch input {
             display           : block;
             width             : calc(100% - 60px);
             padding           : 0.5em;
@@ -25,7 +25,7 @@
             border-radius     : 0.5em;
       }
  
-      div.form-group.FieldPassword div.form-wrap i {
+      div.form-group.FieldPasswordMatch div.form-wrap i {
             position          : absolute;
             top               : 40%;
             right             : 10px;
@@ -38,12 +38,12 @@
             color             : #999;
       }
 
-      div.form-group.FieldPassword.invalid div.form-wrap i,
-      div.form-group.FieldPassword.valid div.form-wrap i {
+      div.form-group.FieldPasswordMatch.invalid div.form-wrap i,
+      div.form-group.FieldPasswordMatch.valid div.form-wrap i {
             top               : 30%;
       }
 
-      .FieldPassword .status {
+      .FieldPasswordMatch .status {
             display           : none;
             margin            : 10px 0 0;
             padding           : 10px 10px;
@@ -53,5 +53,5 @@
             font-weight       : bold;
       }
 
-      .FieldPassword.invalid span.status.statusError { color : red; display : block;}
-      .FieldPassword.valid span.status.statusSuccess { display : block;}
+      .FieldPasswordMatch.invalid span.status.statusError { color : red; display : block;}
+      .FieldPasswordMatch.valid span.status.statusSuccess { display : block;}
